# skyrim-chat-bot

./: .pdm.toml  README.md  pyproject.toml
bots/: natural_language_processing.py
