[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Zach Bentzinger", email = "bentzingerz@gmail.com"},
]
dependencies = [
    "nltk>=3.7",
    "black>=22.6.0",
    "bpython>=0.22.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
